// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS Components/Tooltip Central smoke-test 1`] = `
<div class="w-256 h-256 flex items-center justify-center m-24 border">
  <div class="relative inline-block align-top h-16 ">
    <button type="button"
            aria-describedby="tooltip"
            class="ml-8 p-0 relative top-1 focus:outline-none "
    >
      <svg class=" "
           style="width: 1rem; height: 1rem;"
      >
        <use xlink:href="#sprite-icon-gui-info">
        </use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`JS Components/Tooltip LeftBound smoke-test 1`] = `
<div class="w-256 h-256 flex items-center m-24 border">
  <div class="relative inline-block align-top h-16 ">
    <button type="button"
            aria-describedby="tooltip"
            class="ml-8 p-0 relative top-1 focus:outline-none "
    >
      <svg class=" "
           style="width: 1rem; height: 1rem;"
      >
        <use xlink:href="#sprite-icon-gui-info">
        </use>
      </svg>
    </button>
  </div>
</div>
`;
